infra/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasqly-backend
  namespace: tasqly-prod
  labels:
    app.kubernetes.io/name: tasqly
    app.kubernetes.io/component: backend
    app.kubernetes.io/environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tasqly
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tasqly
        app.kubernetes.io/component: backend
        app.kubernetes.io/environment: prod
    spec:
      imagePullSecrets:
        - name: ecr-pull-secret

      containers:
        - name: tasqly-backend
          image: 222907083284.dkr.ecr.ca-central-1.amazonaws.com/tasqly-prod-backend:hello-amd64
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "750m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
